# toad-time

./: .git-blame-ignore-revs  .gitignore  .rustfmt.toml  Cargo.toml  Embed.toml  LICENSE.txt  README.md  notes.md  openocd.gdb
.cargo/: config.toml
fonts/: FrogPrincess-10.pcf
src/: animator.rs  display.rs  main.rs  screens.rs  state.rs  state_memo.rs  ticks.rs
src/display/: bmps.rs  fonts.rs  mod.rs  tile_grid.rs  tile_grids.rs
src/fonts/: FrogPrincess-7.pcf
src/screens/: euclid.rs  gate.rs  home.rs  mod.rs
src/state/: bpm.rs  bpm_sync.rs  command.rs  density.rs  element.rs  gate_state.rs  length.rs  mod.rs  output.rs  output_type.rs  play_status.rs  prob.rs  pwm.rs  rate.rs  screen.rs  screen_state.rs  sequence_state.rs  state.rs  state_change.rs  sync.rs
state/: Cargo.toml
state/src/: element.rs  gate.rs  home.rs  lib.rs
toad-time/: Cargo.toml
toad-time/src/: main.rs
toad-time/src/state/: mod.rs  prob.rs  rate.rs
