[package]
edition = "2021"
name = "rp2040-tmp"
version = "0.1.0"

[dependencies]
cortex-m = { version = "0.7.7" }
cortex-m-rt = "0.7.3"
embedded-hal = { version = "0.2.7", features = ["unproven"] }
rotary-encoder-embedded = { version = "0.2.0", features = ["standard"] }
rtic = { git = "https://github.com/rtic-rs/rtic", features = ["thumbv6-backend"] }
rtic-monotonics = { git = "https://github.com/rtic-rs/rtic", features = ["rp2040"] }
rtic-sync = { git = "https://github.com/rtic-rs/rtic" }

defmt = "=0.3.2"
defmt-rtt = "0.4.0"
panic-probe = { version = "0.3.1", features = ["print-defmt"] }

# el BSP
rp-pico = "0.7"

embedded-graphics = "0.7.1"
ssd1306 = "0.7.1"
heapless = { version = "0.7", features = ["cas", "defmt-impl"] }
tinybmp = "0.4.0"

# durations and instants
fugit = "0.3.6"

eg-pcf = { version = "0.1.0", path = "../pcf/eg-pcf" }

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
