[package]
edition = "2021"
name = "toad-time"
version = "0.1.0"

[dependencies]
cortex-m = { version = "0.7.7", features = ["inline-asm"] }
cortex-m-rt = "0.7.3"
embedded-graphics = "0.7.1"
embedded-hal = { version = "0.2.7", features = ["unproven"] }
embedded-hal-async = "=0.2.0-alpha.1"
rotary-encoder-embedded = { version = "0.2.0", features = ["standard"] }

embassy-embedded-hal = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", branch = "master", features = ["defmt"] }
embassy-executor = { version = "0.2.0", git = "https://github.com/embassy-rs/embassy", branch = "master", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-futures = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", branch = "master"}
embassy-rp = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", branch = "master", features = ["defmt", "unstable-traits", "nightly", "unstable-pac", "time-driver", "critical-section-impl"] }
embassy-sync = { version = "0.2.0", git = "https://github.com/embassy-rs/embassy", branch = "master", features = ["defmt"] }
embassy-time = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", branch = "master", features = ["nightly", "unstable-traits", "defmt", "defmt-timestamp-uptime"] }

defmt = "0.3.4"
defmt-rtt = "0.4.0"
panic-probe = { version = "0.3.1", features = ["print-defmt"] }

hash32 = "0.2.1"
heapless = { version = "0.7", features = ["cas", "defmt-impl"] }
ssd1306-async = { git = "https://github.com/kalkyl/ssd1306-async", branch = "main" }
tinybmp = "0.4.0"

eg-pcf = { git = "https://github.com/dobrite/pcf.git" }
seq = { git = "https://github.com/dobrite/seq.git" }

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
