[package]
edition = "2021"
name = "toad-time"
version = "0.1.0"

[dependencies]
cortex-m = { version = "0.7.7" }
cortex-m-rt = "0.7.3"
embedded-hal = { version = "0.2.7", features = ["unproven"] }
rotary-encoder-embedded = { version = "0.2.0", features = ["standard"] }
rp-pico = "0.7"
rtic = { git = "https://github.com/rtic-rs/rtic", features = ["thumbv6-backend"] }
rtic-monotonics = { git = "https://github.com/rtic-rs/rtic", features = ["rp2040"] }
rtic-sync = { git = "https://github.com/rtic-rs/rtic" }

defmt = "0.3.4"
defmt-rtt = "0.4.0"
panic-probe = { version = "0.3.1", features = ["print-defmt"] }

embedded-graphics = "0.7.1"
fugit = "0.3.6"
heapless = { version = "0.7", features = ["cas", "defmt-impl"] }
ssd1306 = "0.7.1"
tinybmp = "0.4.0"

eg-pcf = { git = "https://github.com/dobrite/pcf.git" }
seq = { git = "https://github.com/dobrite/seq.git" }
state = { path = "../state" }
